Fixes #395, sidebar gap in IE9
Also refactored so the scrollbar is just the height of the nav part, not the bottom

--- a/src/sass/sidebar/_nav.scss
+++ b/src/sass/sidebar/_nav.scss
@@ -9,13 +9,7 @@
 		padding: 0;
 		margin: 0;
 		border-top: $border;
-
-		// Make room for the bottom
-		margin-bottom: $footer-height;
-		@media(max-width: $screen-sm) {
-			margin-bottom: $nav-bottom-height-mobile;
-		}
-
+		
 		// Contains both top-level links and optional sub-nav container
 		.main-nav {
 			a {
